<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroung11"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.andrey.igor.guess_bot.lastActivity.OurActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/here_should_be_ur_question"
        android:id="@+id/ourTextView"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnYes"
        android:id="@+id/ourBtnYes"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="seePhoto"
        android:layout_marginBottom="72dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_No"
        android:id="@+id/ourBtnNo"
        android:layout_alignTop="@+id/ourBtnYes"
        android:onClick="btnNo"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
