<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@drawable/backgroung12"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.andrey.igor.guess_bot.generalQuestionActivity.FirstActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/first_General"
        android:id="@+id/firstTextView"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="102dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnYes"
        android:id="@+id/firstBtnYes"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="btnYes"
        android:layout_marginBottom="73dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_No"
        android:id="@+id/firstBtnNo"
        android:layout_alignTop="@+id/firstBtnYes"
        android:onClick="btnNo"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
